# usda-c-grain-sum

./: Cargo.toml  README.md
.github/workflows/: rust.yml
doc/: c-grain-user-guide  -  db 05-30-24.odt  c-grain-user-guide  -  ns 06-03-24.odt  c-grain-user-guide  -  ns 06-04-24.odt  c-grain-user-guide  -  ns 06-13-24.odt  c-grain-user-guide  -  ns 06-14-24.odt  c-grain-user-guide.odt
src/: config_store.rs  data.rs  gui.rs  lib.rs  main.rs  process.rs
