[package]
name = "usda-c-grain-sum"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compile-time = "0.2.0"
csv = "1.3.0"
fltk = "=1.3.33"
opener = { version = "0.7.0", features = ["reveal"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
simple_excel_writer = "0.2.0"
time = { version = "0.3.36", features = ["macros", "formatting"] }
