[package]
name = "usda-c-grain-sum"
version = "0.2.5"
authors = ["Nicholas Sixbury"]
rust-version = "1.77.1"
description = "This project is an application created for use in the USDA as a tool to process output from the C-Grain machine."
readme = "README.md"
repository = "https://github.com/nico6bury/usda-c-grain-sum"
exclude = ["/target","/.vscode"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compile-time = "0.2.0"
csv = "1.3.0"
fltk = "=1.3.33"
opener = { version = "0.7.0", features = ["reveal"] }
quick-xml = "0.31.0"
rust_xlsxwriter = "0.64.2"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
time = { version = "0.3.36", features = ["macros", "formatting"] }
